Fixes issues with OpenShift

--- a/static/style.css
+++ b/static/style.css
@@ -53,3 +53,7 @@ to { transform: scale( 1 ) rotate( 360deg ); }
     -1px 1px 0 rgba(184, 134, 11, 0.25),
     1px 1px 0 rgba(184, 134, 11, 0.25)
 }
+
+.m-l {
+    margin-left: 10px;
+}
